--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
     &copy; {{ site.time | date: "%Y" }}
     {{ site.title }}
     &nbsp; | &nbsp; Built with
-    <a href="https://github.com/greenelab/lab-website-template">
+    <a href="https://www.umoncton.ca/prof/umcm-ghazal_rouhafzay">
       Lab Website Template
     </a>
   </div>
